adds some styling

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,19 +1,70 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Blade X</title>
-    <meta name="description" content="Blade X | Share, track, and sell your knife collection.">
-    <meta name="keywords" content="bladex, pocket, knife, buy, sell, trade, list, benchmade, spyderco">
-    <!-- <link  rel="canonical"  href="https://www.bladex.com/"/> -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css"
-    />
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-  </body>
+
+<head>
+  <meta charset="utf-8" />
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  <title>Blade X</title>
+  <meta name="description" content="Blade X | Share, track, and sell your knife collection.">
+  <meta name="keywords" content="bladex, pocket, knife, buy, sell, trade, list, benchmade, spyderco">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <meta name="theme-color" content="#000000" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css" />
+</head>
+
+<body>
+  <div class="container salt">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="item active top8">
+          <img src="fuse.png" style="width:20%;">
+        </div>
+        <div class="item top">
+          <img src="knife1.png" style="width:20%;">
+        </div>
+        <div class="item top1">
+          <img src="m21.png" style="width:20%;">
+        </div>
+        <div class="item top1">
+          <img src="graphite.png" style="width:20%;">
+        </div>
+        <div class="item top1">
+          <img src="m16.png" style="width:20%;">
+        </div>
+        <div class="item top1">
+          <img src="swindle.png" style="width:20%;">
+        </div>
+        <div class="item top1">
+          <img src="homefront.png" style="width:20%;">
+        </div>
+        <div class="item top7">
+          <img src="knife2.png" style="width:20%;">
+        </div>
+        <div class="item top5">
+          <img src="knife3.png" style="width:20%;">
+        </div>
+        <div class="item top2">
+          <img src="knife5.png" style="width:20%;">
+        </div>
+        <div class="item top3">
+          <img src="knife6.png" style="width:20%;">
+        </div>
+        <div class="item top4">
+          <img src="knife7.png" style="width:20%;">
+        </div>
+        <div class="item top6">
+          <img src="opinel.png" style="width:20%;">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="root"></div>
+</body>
+
 </html>
